<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluefb">
    <ImageView
        android:layout_above="@+id/ll"
        android:src="@drawable/facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/ll"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical"
        android:layout_height="wrap_content" >
        <EditText
            android:paddingLeft="10dp"
            android:hint="@string/inputUN"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/black"
            android:background="@color/white"/>
        <EditText
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:hint="@string/inputPW"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/black"
            android:background="@color/white" />
        <Button
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:text="@string/Button_login"
            android:textColor="@color/white"
            android:background="@color/purpose"/>
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/white"/>
    </LinearLayout>
    <TextView
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="#ffff"/>
</RelativeLayout>